Refactors HTML to PDF conversion process
Updates the HTML to PDF conversion process to use a `PdfDocument` and `PdfWriter` for better resource management and exception handling. This ensures that the PDF stream is properly closed, preventing potential resource leaks.

Also simplifies file name generation and error messages.